# mlkemreport

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/mlkem_pie/: CMakeLists.txt  pie_vec.h
components/mlkem_pie/ml-kem-1024/: ntt_pie.c
components/mlkem_pie/ml-kem-512/: ntt_pie.c
components/mlkem_pie/ml-kem-768/: ntt_pie.c
components/pqclean/: CMakeLists.txt  esp_randombytes.c
components/pqclean/crypto_kem/ml-kem-1024/clean/: poly.c  poly.h  polyvec.c
components/pqclean/crypto_kem/ml-kem-512/clean/: poly.c  poly.h  polyvec.c
components/pqclean/crypto_kem/ml-kem-768/clean/: poly.c  poly.h  polyvec.c
data/analysis/: pie_speedup_s1.csv  pie_speedup_s1.md  pie_speedup_s2.csv  pie_speedup_s2.md  qers_paper_notes.md  reconnect_comparison.csv  reconnect_comparison.md  s1_kpi_table.csv  s1_kpi_table.md  s1_quality_summary.csv  s1_quality_summary.md  s1_summary_stats.csv  s1_summary_stats.md  s2_summary_stats.csv  s2_summary_stats.md
data/csv/: s1_1024_pieoff_session_20260609_022119.csv  s2_1024_pieoff_20260528_215750.csv  s2_1024_pieon_20260528_220010.csv  s2_512_pieoff_20260609_000344.csv  s2_512_pieon_20260609_000625.csv  s2_768_pieoff_20260528_214936.csv  s2_768_pieon_20260528_215330.csv
data/csv_joined/: s1_1024_pieoff_session_20260609_022119_joined.csv  s1_1024_pieon_session_20260609_013807_joined.csv  s1_512_pieoff_session_20260603_150540_joined.csv  s1_512_pieon_session_20260603_144927_joined.csv  s1_768_pieoff_session_20260603_144309_joined.csv  s1_768_pieon_session_20260603_143613_joined.csv
data/csv_subscriber/: s1_1024_pieoff_session_20260609_022123.csv
data/tmp/: s1_1024_pieoff_reconn_20260602_123913_joined.csv  s1_512_pieoff_session_20260602_054954_joined.csv  s1_512_pieon_session_20260602_055221_joined.csv  s1_768_pieoff_session_20260602_055445_joined.csv  s1_768_pieon_session_20260602_055706_joined.csv  s2_512_pieoff_20260528_214350.csv  s2_512_pieon_20260528_214703.csv
docs/: 01-project-structure.md  02-menuconfig-guide.md  03-operational-runbook.md  04-metrics-reference.md  05-pie-optimization.md  06-experiment-plan.md  07-data-analysis-plan.md  08-analysis-tools-and-workflows.md  08-analysis-tools.md  09-ahp-weighting-methodology.md  10-fallback-evaluation-plan.md  11-openwrt-router-setup.md  12-s1-fairness-criteria.md  13-qers-methodology-and-tools.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  energy_sampler.c  energy_sampler.h  ina219.c  ina219.h  metrics.c  metrics.h  microbench.c  microbench.h  mlkem_config.h  mlkem_util.h  scenario_local.c  scenario_local.h  scenario_mqtt.c  scenario_mqtt.h  wifi_manager.c  wifi_manager.h
tmp/contoh_laporan/: BAB 1.md  BAB 2.md  BAB 3.md  BAB 4.md  BAB 5.md  DAFTAR PUSTAKA.md  LAMPIRAN.md
tmp/laporan/: Proposal.docx  analysis_final.md  arsitektur_tesis.drawio  bab1_final.md  bab1_revisi.md  bab2_final.md  bab2_revisi.md  bab3_final.md  bab3_revisi.md  bab4.md  proposal.md  (+2 more)
tools/: capture_uart.sh  check_fairness.py
(+36 files in other folders)
